manifests/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eliopeli-prod-svc
  namespace: eliopeli
  labels:
    app: eliopeli-prod
spec:
  selector:
    app: eliopeli-prod
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
