manifests/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eliopeli-route-prod
  namespace: eliopeli
  labels:
    app: eliopeli-prod
    type: external
spec:
  host: eliopeli-prod.ext.ocp-prod-0.k8s.it.helsinki.fi 
  port:
    targetPort: 80
  to:
    kind: Service
    name: eliopeli-prod-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
